cabal-version:       2.2

name:                colorhash
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/colorhash#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          yourfriends@hapytex.eu
copyright:           2025
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Hashable.Color
  build-depends:
      base >= 4.7 && < 5
    , colour >=0.0.0
    , hashable >=1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/hapytex/colorhash
